// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCardActions Should not render edit/delete/share/restart buttons if current user is not the owner 1`] = `
<div>
  <div
    class="StackCardActions-cardActions-601 cardActions"
  >
    <div
      class="StackCardActions-buttonWrapper-602 buttonWrapper"
    >
      <div
        class=""
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Open
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCardActions creates correct snapshot 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="StackCardActions-cardActions-1 cardActions"
  >
    <div
      class="StackCardActions-buttonWrapper-2 buttonWrapper"
    >
      <div
        class=""
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Open
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="StackCardActions-buttonWrapper-2 buttonWrapper"
    >
      <button
        aria-controls="more-menu"
        aria-haspopup="true"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`StackCardActions creates correct snapshot 2`] = `
<ul
  class="MuiList-root MuiMenu-list MuiList-padding"
  role="menu"
  tabindex="-1"
>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Edit
  </div>
  <div
    disabletooltip="true"
    requiredpermission="delete"
    tooltiptext="Resource is already shared within the project"
    userpermissions="open,delete,edit"
  >
    Share
  </div>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Restart
  </div>
  <div
    requiredpermission="delete"
    userpermissions="open,delete,edit"
  >
    Delete
  </div>
</ul>
`;

exports[`StackCardActions creates correct snapshot if there are multiple copy snippets 1`] = `
<ul
  class="MuiList-root MuiMenu-list MuiList-padding"
  role="menu"
  tabindex="-1"
>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Edit
  </div>
  <div
    disabletooltip="true"
    requiredpermission="delete"
    tooltiptext="Resource is already shared within the project"
    userpermissions="open,delete,edit"
  >
    Share
  </div>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Restart
  </div>
  <div
    requiredpermission="open"
    userpermissions="open,delete,edit"
  >
    Copy Python snippet
  </div>
  <div
    requiredpermission="open"
    userpermissions="open,delete,edit"
  >
    Copy R snippet
  </div>
  <div
    requiredpermission="delete"
    userpermissions="open,delete,edit"
  >
    Delete
  </div>
</ul>
`;
